--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 body{
     background-color: lightgray;
     text-align: center;
+    /* overflow: hidden; */
 }
 
 main {
@@ -51,7 +52,155 @@ background-color: lightskyblue;
 color: white;
 }
 
+
 img {
     width: 75%;
     border: solid 3px black
+}
+/* Campfire Animation for homepage */
+
+.header .number {
+    color: #ffb726;
+}
+.header .type {
+    color: #ff6234;
+}
+.header .social a img {
+    margin-top: 10px;
+    height: 1.5em;
+}
+/* whole campfire's position and sizing */
+.content {
+    max-width: 700px;
+    width: 60%;
+    height: 60%;
+    position: absolute;
+    bottom: 0;
+    left: 30%;
+    z-index: -1;
+}
+.fire {
+    position: absolute;
+    bottom: 4%;
+    left: 25%;
+    width: 30%;
+    padding-bottom: 50%;
+}
+.fire .back {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    padding-bottom: 100%;
+    background: #002601;
+    border-radius: 0 75% 75% 75%;
+    transform: rotate(45deg);
+    animation: fire 2s linear infinite alternate;
+    animation-delay: 1s;
+}
+.fire .medium {
+    position: absolute;
+    bottom: 5%;
+    left: 10%;
+    width: 80%;
+    padding-bottom: 80%;
+    background: #004806;
+    border-radius: 0 75% 75% 75%;
+    transform: rotate(45deg);
+    animation: fire 2s linear infinite alternate;
+    animation-delay: 0.5s;
+}
+.fire .front {
+    position: absolute;
+    bottom: 10%;
+    left: 20%;
+    width: 60%;
+    padding-bottom: 60%;
+    background: #058012;
+    border-radius: 0 75% 75% 75%;
+    transform: rotate(45deg);
+    animation: fire 2s linear infinite alternate;
+}
+.wood {
+    position: absolute;
+    bottom: 0;
+    left: 25%;
+    width: 30%;
+    display: flex;
+}
+.wood .stick {
+    position: relative;
+    width: 33%;
+    padding-bottom: 33%;
+    background: #714717;
+    border-radius: 50%;
+}
+.wood .stick::before {
+    content: "";
+    position: absolute;
+    width: 80%;
+    padding-bottom: 80%;
+    border-radius: 50%;
+    left: 10%;
+    top: 10%;
+    background: #975314;
+}
+.wood .stick::after {
+    content: "";
+    position: absolute;
+    width: 50%;
+    padding-bottom: 50%;
+    border-radius: 50%;
+    left: 25%;
+    top: 25%;
+    background: #714717;
+}
+.light {
+    position: absolute;
+    bottom: -5%;
+    left: 3%;
+    width: 75%;
+    padding-bottom: 75%;
+    border-radius: 50%;
+    background: #3F6448;
+    animation: light 2s linear infinite alternate;
+}
+.light::before {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 5%;
+    width: 90%;
+    padding-bottom: 90%;
+    border-radius: 50%;
+    background: #447952;
+}
+.light::after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 12.5%;
+    width: 75%;
+    padding-bottom: 75%;
+    border-radius: 50%;
+    background: #46995c;
+}
+@keyframes light {
+    0% {
+        opacity: 1;
+        transform: translate(0px) scale(1);
+   }
+    100% {
+        opacity: 0.6;
+        transform: translateY(-10px) scaleX(0.9);
+   }
+}
+@keyframes fire {
+    0% {
+        opacity: 1;
+        transform: scale(1) rotate(45deg);
+   }
+    100% {
+        opacity: 0.8;
+        transform: scale(0.9) rotate(45deg);
+   }
 }
